[project]
name = "audiototext"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "langchain-mcp-adapters>=0.1.9",
    "langgraph>=0.5.4",
    "openai>=1.97.1",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "srt>=3.5.3",
    "tqdm>=4.67.1",
]
